RESOLVED FIXED240571
importedScript service worker loads should not have ServiceWorker headers
https://bugs.webkit.org/show_bug.cgi?id=240571
Summary importedScript service worker loads should not have ServiceWorker headers
youenn fablet
Reported 2022-05-18 05:28:47 PDT
importedScript service worker loads should not have ServiceWorker headers
Attachments
EWS
Comment 1 2022-05-19 09:28:56 PDT
Committed r294487 (250746@main): <https://commits.webkit.org/250746@main> Reviewed commits have been landed. Closing PR #721 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2022-05-19 09:29:27 PDT
Note You need to log in before you can comment on or make changes to this bug.