importedScript service worker loads should not have ServiceWorker headers https://bugs.webkit.org/show_bug.cgi?id=240571

Patch by Youenn Fablet <youennf@gmail.com> on 2022-05-19
Reviewed by Chris Dumez.

In case of update, we were reloading imported scripts with ServiceWorker header.
Prevent this as this is not as per spec.

Test: http/wpt/service-workers/update-with-importScripts.html

* Source/WebCore/workers/service/ServiceWorkerJob.cpp:
(WebCore::scriptResourceRequest):
(WebCore::ServiceWorkerJob::ImportedScriptsLoader::load):
(WebCore::ServiceWorkerJob::fetchScriptWithContext):
* Source/WebCore/workers/service/server/SWServer.cpp:
(WebCore::SWServer::createScriptRequest):
(WebCore::SWServer::startScriptFetch):
* LayoutTests/http/wpt/service-workers/resources/update-with-importScripts-script.py: Added.
(main):
* LayoutTests/http/wpt/service-workers/resources/update-with-importScripts-worker.js: Added.
* LayoutTests/http/wpt/service-workers/update-with-importScripts-expected.txt: Added.
* LayoutTests/http/wpt/service-workers/update-with-importScripts.html: Added.
* LayoutTests/platform/mac/TestExpectations:

Canonical link: https://commits.webkit.org/250746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294487 268f45cc-cd09-0410-ab3c-d52691b4dbfc